--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 231 - Web Frontend Development I</title>
+    <link rel="stylesheet" href="styles/normalize.css">
 </head>
 <body>
     <h1>Web Frontend Development I - Wiliam Tshani</h1>
