--- a/index.html
+++ b/index.html
@@ -12,17 +12,19 @@
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/large.css">
+    <script src="scripts/main.js" defer></script>
+    <script src="scripts/courses.js" defer></script>
 </head>
 <body>
     <header>
         <img src="images/home.svg" alt="Site Logo" width="512" height="512">
         <span> William Tshani</span>
-        <button id="ham-btn" class="hamburger"></button>
+        <button id="menu" class="hamburger" title="Menu"></button>
     </header>
     <nav id="nav-bar" class="navigation">
         <ul>
-            <li><a href="#">Home</a></li>
-            <li class="current"><a href="#">Chamber</a></li>
+            <li><a class="active" href="index.html">Home</a></li>
+            <li><a href="#">Chamber</a></li>
             <li><a href="#">Final</a></li>
         </ul>
     </nav>
@@ -30,7 +32,7 @@
         <h1>Home</h1>
         <section class="about-me">
             <h2>About Me</h2>
-            <p>
+            <p id="abt-me-par">
                 I'm William Mbuyamba Tshani, based in Johannesburg, South Africa. I'm currently pursuing a Bachelor of Science in
                 Applied Technology through BYU–Idaho. My passion lies in leadership, innovation, and designing systems that uplift
                 communities. I thrive on learning, mentoring, and exploring ideas that contribute to a brighter, more sustainable future
@@ -41,12 +43,12 @@
             <h2>Student Photo</h2>
             <img src="images/williamT-photo.png" alt="William mbuyamba Tshani" width="200" height="200">
         </section>
-        <section class="courses">
-            <h2>Web Certificate Courses</h2>
-            <div class="course-box">
-                <button class="course-btn" value="all" title="Filter button">All</button>
-                <button class="course-btn" value="cse" title="Filter button">SCE</button>
-                <button class="course-btn" value="wdd" title="Filter button">WDD</button>
+        <section class="certificate-box">
+            <h2>Web and Computer Programming Certificate</h2>
+            <div class="boxButton">
+                <button class="courseButton" value="all" title="Filter button">All</button>
+                <button class="courseButton" value="cse" title="Filter button">SCE</button>
+                <button class="courseButton" value="wdd" title="Filter button">WDD</button>
             </div>
             <div class="boxcertificate01 boxCourse"></div>
             <dialog id="courses-details"></dialog>
