--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <link rel="stylesheet" href="styles/small-view.css">
     <link rel="stylesheet" href="styles/large-view.css">
     <script src="scripts/main.js" defer></script>
-    <!-- <script src="scripts/courses.js" defer></script> -->
     <script src="scripts/certificate-01.js" defer></script>
 </head>
 
@@ -46,7 +45,7 @@
             </div>
             <div class="second-screen">
                 <h2>Student Photo</h2>
-                <img src="images/williamT-photo.png" alt="Student Image" loading="lazy">
+                <img src="images/williamt-photo.png" alt="Student Image" loading="lazy">
             </div>
         </section>
         <!------------------SECTION SECTION----------------------->
