Corrected the image file name

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
             <div class="second-screen">
                 <h2>Student Photo</h2>
-                <img src="images/williamt-photo.png" alt="Student Image" loading="lazy">
+                <img src="images/william-photo.png" alt="Student Image" loading="lazy">
             </div>
         </section>
         <!------------------SECTION SECTION----------------------->
