--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     </header>
     <nav id="nav-bar" class="navigation">
         <ul>
-            <li><a class="active" href="index.html">Home</a></li>
-            <li><a href="#">Chamber Project</a></li>
+            <li class="home-page"><a href="index.html">Home</a></li>
+            <li><a href="https://tshanim.github.io/wdd231/chamber/directory.html">Chamber Project</a></li>
             <li><a href="#">Final Project</a></li>
         </ul>
     </nav>
