--- a/chamber/index.html
+++ b/chamber/index.html
@@ -14,7 +14,7 @@
     <meta property="fb:app_id" content="your-app-id-here">
 
 
-    <title>Directory | Johannesburg Chamber of Commerce</title>
+    <title>Verified Business Directory – Johannesburg Chamber of Commerce</title>
     <meta name="description" content="Explore verified businesses, events, and resources in the Johannesburg Chamber of Commerce directory">
     <meta name="author" content="William Mbuyamba Tshani">
 
