--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -15,7 +15,7 @@
 
 
     <title>Verified Business Directory – Johannesburg Chamber of Commerce</title>
-    <meta name="description" content="Explore verified businesses, events, and resources in the Johannesburg Chamber of Commerce directory">
+    <meta name="description" content="Discover trusted businesses, upcoming events, and local resources in Johannesburg’s Chamber directory">
     <meta name="author" content="William Mbuyamba Tshani">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
