--- a/chamber/index.html
+++ b/chamber/index.html
@@ -14,7 +14,7 @@
     <meta property="fb:app_id" content="your-app-id-here">
 
 
-    <title>Verified Business Directory – Johannesburg Chamber of Commerce</title>
+    <title>Verified Business Directory and Johannesburg Chamber of Commerce</title>
     <meta name="description" content="Discover trusted businesses, upcoming events, and local resources in Johannesburg’s Chamber directory">
     <meta name="author" content="William Mbuyamba Tshani">
 
