Changed the image file to webp

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -13,7 +13,6 @@
     <meta property="og:description" content="Empowering Johannesburg’s business community through connection, visibility, and growth opportunities. Join the Chamber and shape the future of local enterprise">
     <meta property="fb:app_id" content="your-app-id-here">
 
-
     <title>Verified Business Directory and Johannesburg Chamber of Commerce</title>
     <meta name="description" content="Discover trusted businesses, upcoming events, and local resources in Johannesburg’s Chamber directory">
     <meta name="author" content="William Mbuyamba Tshani">
@@ -59,10 +58,10 @@
     <main>
         <section class="hero-main-box">
             <picture class="hero-box-img">
-                <source media="(max-width: 600px)" srcset="images/hero-image-jcc.png">
-                <source media="(max-width: 800px)" srcset="images/hero-image-jcc.png">
-                <source media="(max-width: 1200px)" srcset="images/hero-image-jcc.png">
-                <source media="(min-width: 1201px)" srcset="images/hero-image-jcc.png">
+                <source media="(max-width: 600px)" srcset="images/hero-image-jcc.webp">
+                <source media="(max-width: 800px)" srcset="images/hero-image-jcc.webp">
+                <source media="(max-width: 1200px)" srcset="images/hero-image-jcc.webp">
+                <source media="(min-width: 1201px)" srcset="images/hero-image-jcc.webp">
                 <img class="hero-home-img" src="images/hero-image-jcc.png" alt="Johanesburg City">
             </picture>
 
