Updated the alt for image

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -62,7 +62,7 @@
                 <source media="(max-width: 800px)" srcset="images/hero-image-jcc.webp">
                 <source media="(max-width: 1200px)" srcset="images/hero-image-jcc.webp">
                 <source media="(min-width: 1201px)" srcset="images/hero-image-jcc.webp">
-                <img class="hero-home-img" src="images/hero-image-jcc.png" alt="Johanesburg City">
+                <img class="hero-home-img" src="images/hero-image-jcc.png" alt="JCCI">
             </picture>
 
             <div class="call-to-action">
