Updated the Join Us button to be responsive

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -69,7 +69,7 @@
                 <h3>Join the Johannesburg Chamber Today.</h3>
                 <p>Connect with a thriving network of entrepreneurs, and unlock growth, visibility, and partnerships that shape Johannesburg’s future.</p>
                 <p>Empower Your Business. Click below to join.</p>
-                <button class="join-us" name="join" onclick="window.location.href='/chamber/join.html'">Join us</button>
+                <button class="join-us" name="join" onclick="window.location.href='../chamber/join.html'">Join us</button>
             </div>
         </section>
         <section class="event-main-box">
