Completed Join page

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -151,15 +151,15 @@
         
             <section class="msg-box">
                 <div class="rotating-text">
-                    <h3 class="start-p">Become part of our</h3>
+                    <h3 class="start-p">Join and discover our</h3>
                     <p>
-                        <span class="word alizarin">Awesome</span>
-                        <span class="word wisteria">Amazing</span>
-                        <span class="word peter-river">Incredible</span>
-                        <span class="word emerald">Fantastic</span>
-                        <span class="word sun-flower">Fabulous</span>
+                        <span class="word alizarin">Dynamic</span>
+                        <span class="word wisteria">Innovative</span>
+                        <span class="word peter-river">Thriving</span>
+                        <span class="word emerald">Connected</span>
+                        <span class="word sun-flower">Empowered</span>
                     </p>
-                    <h3 class="end-p">community!</h3>
+                    <h3 class="end-p">business network!</h3>
                 </div>
             </section>
         
