Fixed the Join page

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -59,7 +59,7 @@
     <main>
         <form method="get" action="thankyou.html">
             <h2 class="sub-title-form">Membership Application</h2>
-            <label for="name" class="name-lb">
+            <label class="name-lb">
                 Name:
             </label>
             <input type="text" id="firstName" name="firstName" title="Enter your first name" autocomplete="given-name" required
