Made corrections on thank you page

--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -64,7 +64,8 @@
                 <p><strong>Submission Date:</strong> <span id="timestamp"></span></p>
             </div>
 
-            <p>If you're curious or want to explore further, feel free to <a class="discover-link" href="index.html" class=css-button-sharp--grey">Return to the Homepage</a></p>
+            <p>If you're curious or want to explore further, feel free to <a class="discover-link" href="discover.html">discover more.</a></p>
+            <a href="index.html" class="css-button-sharp--grey">Return to Home</a>
             
         </section>
     </main>
