Made some improvement to this page

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -57,7 +57,13 @@
             </ul>
         </nav>
     </header>
+    <!-- Visitor message banner at the very top of main content -->
+    <div id="visitor-message" class="visitor-message">
+        <span id="visitor-text"></span>
+        <span id="close-message" class="close-message">&times;</span>
+    </div>
     <main class="discover">
+        
         
     </main>
 
