Completed the final project

--- a/finalproject/thankyou.html
+++ b/finalproject/thankyou.html
@@ -7,14 +7,14 @@
     <meta name="description" content="Thank-you page for South Africa Experience – A Cultural and Travel Guide">
     <meta name="author" content="William Mbuyamba Tshani">
 
-    <link rel="icon" href="images/favicon/favicon-32x32.png" sizes="32x32" type="image/ico">
+    <link rel="icon" href="images/favicon.ico" sizes="32x32" type="image/ico">
 
     <!-- Essential META Tags -->
     <meta property="og:title" content="Thank You | South Africa Experience">
     <meta property="og:type" content="website" />
     <meta property="og:description"
         content="Thank you for booking with South Africa Experience. Your journey into culture and adventure begins now.">
-    <meta property="og:image" content="images/favicon/favicon.png">
+    <meta property="og:image" content="images/favicon.ico">
     <meta property="og:url" content="https://yourgithubusername.github.io/sa-experience/thankyou.html">
     <meta name="twitter:card" content="summary_large_image">
 
@@ -26,15 +26,16 @@
 
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/main.css">
+    <script src="scripts/thankyou.js" defer></script>
 </head>
 
 <body>
     <header>
         <nav>
             <div class="box-logo-header">
-                <img class="logo-chamber" src="images/favicon/favicon-circle-200x200.png"
+                <img class="logo-chamber" src="images/south-africa-x-logo.webp"
                     alt="South Africa Experience Logo" />
-                <h1 class="nameHeader"><strong>South Africa</strong> <br>Experience</h1>
+                <h1 class="nameHeader"><strong>A Cultural and Travel</strong> <br>Guide</h1>
             </div>
         </nav>
     </header>
@@ -51,15 +52,36 @@
     </main>
 
     <footer>
-        <p>&copy;<span id="currentyear">2025</span> - William Mbuyamba Tshani - South Africa Experience</p>
-        <p id="lastModified">Last updated: <span id="lastModifiedDate"></span></p>
+        <div class="footer-container">
+            <div class="contact-info">
+                <h3>South Africa Experience Travel Guide</h3>
+                <p>Address: 100 Jeppe Street, Johannesburg, SA</p>
+                <p>Email: <a href="mailto:info@sa-experience.org">info@sa-experience.org</a></p>
+                <p>Phone: <a href="tel:+27111234567">+27 (11) 123-4567</a></p>
+            </div>
+        
+            <div class="social-media">
+                <a href="https://www.youtube.com/user/SouthAfricanTourism" target="_blank" aria-label="YouTube">
+                    <img src="./images/youtube.svg" alt="YouTube">
+                </a>
+                <a href="https://www.instagram.com/visitsouthafrica/?hl=en" target="_blank" aria-label="Twitter">
+                    <img src="./images/twitter-x.svg" alt="Twitter">
+                </a>
+                <a href="https://www.linkedin.com/company/south-african-tourism/?originalSubdomain=za" target="_blank"
+                    aria-label="LinkedIn">
+                    <img src="./images/linkedin.svg" alt="LinkedIn">
+                </a>
+                </a>
+            </div>
+        
+            <div class="footer-note">
+                <h3>WDD231 Class Project</h3>
+                <p>William Mbuyamba Tshani</p>
+                <p>&copy;<span id="currentyear">Lorem</span> • Johannesburg • South Africa</p>
+                <p><span id="lastModified"></span></p>
+            </div>
+        </div>
     </footer>
-
-    <script>
-        // Auto-update footer date
-        document.getElementById("currentyear").textContent = new Date().getFullYear();
-        document.getElementById("lastModifiedDate").textContent = document.lastModified;
-    </script>
 </body>
 
 </html>
