--- a/finalproject/contact.html
+++ b/finalproject/contact.html
@@ -7,14 +7,14 @@
     <meta name="description" content="Contact page for South Africa Experience – A Cultural and Travel Guide">
     <meta name="author" content="William Mbuyamba Tshani">
 
-    <link rel="icon" href="images/favicon/favicon-32x32.png" sizes="32x32" type="image/ico">
+    <link rel="icon" href="images/favicon.ico" sizes="32x32" type="image/ico">
 
     <!-- Essential META Tags -->
     <meta property="og:title" content="Contact | South Africa Experience">
-    <meta property="og:type" content="website" />
+    <meta property="og:type" content="website">
     <meta property="og:description"
         content="Connect with South Africa Experience to plan your journey through breathtaking landscapes, vibrant culture, and unforgettable adventures.">
-    <meta property="og:image" content="images/favicon/favicon.png">
+    <meta property="og:image" content="images/favicon.ico">
     <meta property="og:url" content="https://yourgithubusername.github.io/sa-experience/contact.html">
     <meta name="twitter:card" content="summary_large_image">
 
@@ -39,9 +39,9 @@
     <header>
         <nav>
             <div class="box-logo-header">
-                <img class="logo-chamber" src="images/favicon/favicon-circle-200x200.png"
+                <img class="logo-chamber" src="images/south-africa-x-logo.webp"
                     alt="South Africa Experience Logo" width="200" height="200" loading="lazy" />
-                <h1 class="nameHeader"><strong>South Africa</strong> <br>Experience</h1>
+                <h1 class="nameHeader"><strong>A Cultural and Travel</strong> <br>Guide</h1>
                 <button name="navigation button" id="menu" aria-label="Toggle menu"></button>
             </div>
             <ul>
@@ -55,7 +55,7 @@
     <main class="container-contact">
         <section class="contact-box">
             <div class="image-side slideshow" id="slider">
-                <img id="rotating-image" src="images/contact-page-sa.png" alt="South Africa scenery" width="420"
+                <img id="rotating-image" src="images/contact-page-00.png" alt="South Africa scenery" width="420"
                     height="767" loading="lazy">
             </div>
             <div class="form-container">
@@ -86,33 +86,45 @@
 
         <article class="box-contact-action">
             <div class="image-container">
-                <img src="images/contact-banner-sa.png" alt="South Africa adventure banner" width="900" height="506">
+                <img src="images/south-africa-city-small.webp" alt="South Africa adventure banner" width="900" height="506">
             </div>
             <div class="final-contact">
                 <h3>Explore South Africa Like Never Before</h3>
                 <p>Your next adventure starts here.</p>
-                <div class="contact-item-social">
-                    <a href="#"><img src="images/logos/Facebook_Logo_Secondary.png" alt="Facebook" width="104"
-                            height="104"></a>
-                    <a href="#"><img src="images/logos/logo-x-version-white.png" alt="X (Twitter)" width="104"
-                            height="104"></a>
-                    <a href="#"><img src="images/logos/Instagram_Glyph_White.png" alt="Instagram" width="104"
-                            height="104"></a>
-                </div>
             </div>
         </article>
     </main>
 
     <footer>
-        <p>&copy;<span id="currentyear">2025</span> - William Mbuyamba Tshani - South Africa Experience</p>
-        <p id="lastModified">Last updated: <span id="lastModifiedDate"></span></p>
-        <div class="social"></div>
-    </footer>
-
-    <script>
-        // Auto-update footer date
-        document.getElementById("lastModifiedDate").textContent = document.lastModified;
-    </script>
+        <div class="footer-container">
+            <div class="contact-info">
+                <h3>South Africa Experience Travel Guide</h3>
+                <p>Address: 100 Jeppe Street, Johannesburg, SA</p>
+                <p>Email: <a href="mailto:info@sa-experience.org">info@sa-experience.org</a></p>
+                <p>Phone: <a href="tel:+27111234567">+27 (11) 123-4567</a></p>
+            </div>
+        
+            <div class="social-media">
+                <a href="https://www.youtube.com/user/SouthAfricanTourism" target="_blank" aria-label="YouTube">
+                    <img src="./images/youtube.svg" alt="YouTube">
+                </a>
+                <a href="https://www.instagram.com/visitsouthafrica/?hl=en" target="_blank" aria-label="Twitter">
+                    <img src="./images/twitter-x.svg" alt="Twitter">
+                </a>
+                <a href="https://www.linkedin.com/company/south-african-tourism/?originalSubdomain=za" target="_blank"
+                    aria-label="LinkedIn">
+                    <img src="./images/linkedin.svg" alt="LinkedIn">
+                </a>
+                </a>
+            </div>
+        
+            <div class="footer-note">
+                <h3>WDD231 Class Project</h3>
+                <p>William Mbuyamba Tshani</p>
+                <p>&copy;<span id="currentyear">Lorem</span> • Johannesburg • South Africa</p>
+                <p><span id="lastModified"></span></p>
+            </div>
+        </div>
 </body>
 
 </html>
