--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <ul>
             <li class="home-page"><a href="index.html">Home</a></li>
             <li><a href="https://tshanim.github.io/wdd231/chamber/directory.html">Chamber Project</a></li>
-            <li><a href="#">Final Project</a></li>
+            <li><a href="https://tshanim.github.io/wdd231/finalproject/index.html">Final Project</a></li>
         </ul>
     </nav>
     <main>
