Corrections made the index.html and main.css files

--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -11,7 +11,7 @@
 
     <!-- Essential META Tags -->
     <meta property="og:title" content="Home | South Africa Experience">
-    <meta property="og:type" content="website" />
+    <meta property="og:type" content="website">
     <meta property="og:description"
         content="Discover the beauty of South Africa through breathtaking landscapes, diverse culture, and unforgettable adventures.">
     <meta property="og:image" content="images/favicon/favicon.png">
@@ -40,7 +40,7 @@
         <nav>
             <div class="box-logo-header">
                 <img class="logo-chamber" src="images/south-africa-x-logo.webp"
-                    alt="Logo South Africa Experience" width="340" height="240" loading="lazy" />
+                    alt="Logo South Africa Experience" width="340" height="240" loading="lazy">
                 <h1 class="nameHeader"><strong>A Cultural and Travel</strong><br>Guide</h1>
                 <button name="navigation button" id="menu" aria-label="Toggle menu"></button>
             </div>
