Changed the section element to a div in index.html

--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -72,7 +72,7 @@
             </div>
         </section>
 
-        <section class="midle-box">
+        <div class="midle-box">
             <article class="side_article">
                 <h3>Leave <br> it to us!</h3>
                 <p>Discover the magic of South Africa through breathtaking landscapes, vibrant cities, rich culture, and
@@ -101,7 +101,7 @@
                     <p>Plans change—we make rescheduling easy, keeping your adventure stress-free.</p>
                 </div>
             </article>
-        </section>
+        </div>
 
         <section class="cities-weather-box">
             <div class="back-box">
