Made correction to the thankyou page

--- a/finalproject/thankyou.html
+++ b/finalproject/thankyou.html
@@ -35,7 +35,8 @@
             <div class="box-logo-header">
                 <img class="logo-chamber" src="images/south-africa-x-logo.webp"
                     alt="South Africa Experience Logo" />
-                <h1 class="nameHeader"><strong>A Cultural and Travel</strong> <br>Guide</h1>
+                <h1 class="nameHeader"><strong>A Cultural and Travel</strong> <br>Guide
+                </h1>
             </div>
         </nav>
     </header>
